--- a/src/index.scss
+++ b/src/index.scss
@@ -56,6 +56,7 @@ html[data-theme='light'] {
   --bcg-big-button: #02172a;
   --color-big-button: #ffffff;
   --fill-contact-icon: #ff6b01;
+  --shadow-repassword: 0px 10px 20px 5px rgba(0, 0, 0, 0.5);
 }
 
 /* Dark theme */
@@ -93,6 +94,7 @@ html[data-theme='dark']{
   --bcg-big-button: #ffffff;
   --color-big-button: #000000;
   --fill-contact-icon: RoyalBlue;
+  --shadow-repassword: rgba(255, 255, 255, 0.35) 0px 2px 20px;
 }
 
 body {
@@ -128,6 +130,14 @@ a {
 
 ul {
   list-style: none;
+}
+
+.space .label {
+  color: var(--text-primary);
+}
+
+.space .number {
+  color: var(--text-primary);
 }
 
 .container {
