--- a/src/modules/Header/MobileMenu/mobile-menu.module.scss
+++ b/src/modules/Header/MobileMenu/mobile-menu.module.scss
@@ -33,6 +33,7 @@
     width: 100%;
     height: 100vh;
     background-color: var(--bcg-primary);
+    transition: background-color 500ms ease-in-out;
 
     z-index: 1;
 }
@@ -64,7 +65,6 @@
     flex-direction: column;
 
     border-bottom: 1px solid var(--color-border);
-    // transition: 300ms ease-in-out;
 }
 
 .item:hover,
