--- a/src/pages/RePasswordPage/rePasswordPage.module.scss
+++ b/src/pages/RePasswordPage/rePasswordPage.module.scss
@@ -4,8 +4,8 @@
   gap: 50px;
   margin: 0 auto;
   margin-top: 100px;
-  color: var(--text-materials);
-  background: var(--bcg-second);
+  color: var(--text-primary);
+  background: var(--bgc-form);
 
   box-shadow: var(--shadow-repassword);
 
