--- a/src/modules/Auth/LoginForm/loginForm.module.scss
+++ b/src/modules/Auth/LoginForm/loginForm.module.scss
@@ -5,8 +5,7 @@
   gap: 32px;
 
   @media (min-width: 768px) {
-    display: block;
-    text-align: start;
+    flex-direction: row;
   }
 }
 
@@ -15,31 +14,43 @@
   font-weight: 500;
   font-size: 10px;
   line-height: 1.2;
+  padding-bottom: 32px;
+  text-align: center;
 
   @media (min-width: 768px) {
     padding-bottom: 32px;
     font-size: 14px;
     line-height: 1.14;
+    text-align: start;
   }
 }
 
 .google_btn {
+  display: flex;
   background-color: var(--bcg-google-btn);
   padding: 17px 37px;
   border: none;
   filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.1));
 
   @media (min-width: 768px) {
-    margin-right: 32px;
+    width: 158px;
   }
 }
 
 .facebook_btn {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  padding: 14px 22px;
+
   background-color: #2f55a4;
   color: white;
-  padding: 17px 37px;
   border: none;
   filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.1));
+
+  @media (min-width: 768px) {
+    width: 158px;
+  }
 }
 
 .input {
