--- a/src/shared/components/ButtonBig/buttonBig.module.scss
+++ b/src/shared/components/ButtonBig/buttonBig.module.scss
@@ -8,8 +8,10 @@
   letter-spacing: 0.02em;
   background-color: var(--bcg-big-button);;
   color: var(--color-big-button);
-  padding-top: 60px;
-  padding-bottom: 42px;
+  // padding-top: 60px;
+  // padding-bottom: 42px;
+  // padding-left: 80px;
+  padding: 56px 51px 46px 52px;
   border: none;
   margin-left: auto;
   margin-right: auto;
@@ -27,7 +29,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 24px;
+  width: 100%;
   height: 24px;
   stroke-width: 0;
   stroke: currentColor;
