--- a/src/modules/Auth/LoginForm/loginForm.module.scss
+++ b/src/modules/Auth/LoginForm/loginForm.module.scss
@@ -42,15 +42,19 @@
   align-items: center;
   gap: 4px;
   padding: 14px 22px;
-
-  background-color: #2f55a4;
-  color: white;
+  font-weight: 600;
+  background-color: var(--bcg-google-btn);
   border: none;
   filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.1));
 
   @media (min-width: 768px) {
     width: 158px;
   }
+}
+
+.facebook_icon {
+  height: 24px;
+  width: 25px;
 }
 
 .input {
