--- a/src/modules/Auth/LoginForm/loginForm.module.scss
+++ b/src/modules/Auth/LoginForm/loginForm.module.scss
@@ -45,6 +45,8 @@
   font-weight: 600;
   background-color: var(--bcg-google-btn);
   border: none;
+  color: black;
+  font-size: 15px;
   filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.1));
 
   @media (min-width: 768px) {
